# tmdb-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/libs/handlers/: client.rs  core.rs  cursors.rs  helpers.rs  mod.rs  movies.rs  tv.rs
src/libs/models/: genre.rs  language.rs  mod.rs  movies.rs  people.rs  production.rs  reviews.rs  tv.rs
